# deeper_hub

./: .credo.exs  .gitignore  .windsurfrules  Dashboard.md  Index.md  MinGW-w64.bat  README.md  README2.md  Summary.md  TPL_README.md  Tasks.md  Users Channel Messages [OK]  client.bat  create_structure.ex  db_connection_adapter_temp.ex  deploy.sh  extract_readmes.py  gemini_server.py  history.json  history2.json  mingw64.7z  mix.exs  prompt.md  repository_joins_backup.ex  server.bat  tasks.md  test.bat  test_phoenix.py  test_results.exs  test_websocket.py  test_websocket_client.py
.cursor/rules/: readme.mdc
.gitOLD/: COMMIT_EDITMSG  ORIG_HEAD  index
.gitOLD/logs/: HEAD
.git_old/: COMMIT_EDITMSG  ORIG_HEAD  index
.git_old/logs/: HEAD
Mnesia.nonode@nohost/: users.DCL
client/: .gitignore  CMakeLists.txt  README.md  build.bat
client/config/: config.json
client/include/: database_operations.hpp  websocket_client.hpp
client/src/: database_operations.cpp  main.cpp  websocket_client.cpp
client/vcpkg/: setup_vcpkg.bat  vcpkg.ps1  vcpkg_fixed.ps1
config/: auth.exs  config.exs  dev.exs  event_bus.exs  prod.exs  runtime.exs  security.ex  test.exs
database/: dev.db  dev.db-shm  dev.db-wal  test.db  test.db-shm  test.db-wal
databases/: deeper_hub_dev.db  deeper_hub_dev.db-shm  deeper_hub_dev.db-wal
deeper_client/: build.bat  install_meson.bat  meson.build  setup_dependencies.bat
deeper_client/Subprojects/websocketpp-0.8.2/: .meson-subproject-wrap-hash.txt
deeper_client/include/: cpp_client_adapter.h  http_client.h  websocket_client.h  websocketpp_config.h
deeper_client/src/: cpp_client_adapter.cpp  http_client.cpp  main.cpp  websocket_client.cpp
deeper_hub/: .dialyzer_ignore.exs  .gitignore  .windsurfrules  Dashboard.md  Index.md  README.md  TPL_README.md  Tasks.md  build.bat  kill.bat  mix.exs  prompt.md  reflect.bat  server.bat
deeper_hub/.gitOLD/: COMMIT_EDITMSG  index
deeper_hub/.git_old/: COMMIT_EDITMSG  FETCH_HEAD  config  packed-refs
deeper_hub/config/: config.exs  prod.exs  repository.exs  runtime.exs  test.exs
deeper_hub/database/: dev.db-shm  test.db-wal
deeper_hub/deeper_client/: config.json
deeper_hub/deeper_client/Subprojects/: meson.build
deeper_hub/deeper_client/Subprojects/nlohmann_json-3.12.0/single_include/nlohmann/: json.hpp
deeper_hub/lib/: deeper_hub.ex
deeper_hub/readmes/: DeeperHub_API.md  DeeperHub_Achievements.md  DeeperHub_Audit.md  DeeperHub_Auth.md  DeeperHub_Biometrics.md  DeeperHub_Challenges.md  DeeperHub_Core_APIResponder.md  DeeperHub_Core_BackgroundTaskManager.md  DeeperHub_Core_Cache.md  DeeperHub_Core_CircuitBreaker.md  DeeperHub_Core_ConfigManager.md  DeeperHub_Core_EncryptionService.md  DeeperHub_Core_EventBus.md  DeeperHub_Core_HTTPClient.md  DeeperHub_Core_InputValidator.md  DeeperHub_Core_Internationalization.md  DeeperHub_Core_Logger.md  DeeperHub_Core_Metrics.md  DeeperHub_Core_Repo.md  DeeperHub_FeatureFlags.md  DeeperHub_GeoIP.md  DeeperHub_Lists.md  DeeperHub_Mailer.md  DeeperHub_Notifications.md  DeeperHub_OAuth.md  DeeperHub_Security.md  DeeperHub_Security_AdminAuth.md  DeeperHub_Security_BehavioralAnalysis.md  DeeperHub_Security_CsrfProtection.md  DeeperHub_Security_DataMasking.md  DeeperHub_Security_DeviceFingerprint.md  DeeperHub_Security_DeviceService.md  DeeperHub_Security_GeoLocationService.md  DeeperHub_Security_IPFirewallService.md  DeeperHub_Security_IntrusionDetection.md  DeeperHub_Security_PathTraversalProtection.md  DeeperHub_Security_Policy_SecurityPolicyManager.md  DeeperHub_Security_ResponseSanitizer.md  DeeperHub_Security_RiskAssessment.md  DeeperHub_Security_SqlInjectionProtection.md  (+27 more)
deeper_hub/test/: deeper_hub_test.exs
deeper_hub/test_python/: config.py
docs/: ARQUITETURA.md  EMAIL.md  PRODUCAO.md  SEGURANCA.md
docs/core/: repository_integration.md
lib/Deeper_Hub/: accounts.ex  application.ex
mix/inspector/: behaviour.ex  function.ex  inspector_facade.ex  supervisor.ex  type_spec.ex  type_spec_inspector.ex
mnesia_data/: users.DCD  users.DCL
priv/repo/: dev.db
readmes/: DeeperHub_API.md  DeeperHub_Achievements.md  DeeperHub_Auth.md  DeeperHub_Biometrics.md  DeeperHub_Challenges.md  DeeperHub_Console.md  DeeperHub_Core_APIResponder.md  DeeperHub_Core_BackgroundTaskManager.md  DeeperHub_Core_Cache.md  DeeperHub_Core_CircuitBreaker.md  DeeperHub_Core_ConfigManager.md  DeeperHub_Core_EncryptionService.md  DeeperHub_Core_EventBus.md  DeeperHub_Core_Internationalization.md  DeeperHub_Core_Logger.md  DeeperHub_Core_Metrics.md  DeeperHub_Core_Repo.md  DeeperHub_FeatureFlags.md  DeeperHub_GeoIP.md  DeeperHub_Lists.md  DeeperHub_MFA.md  DeeperHub_Mailer.md  DeeperHub_ModuleInspector.md  DeeperHub_Notifications.md  DeeperHub_OAuth.md  DeeperHub_Rewards.md  DeeperHub_Security.md  DeeperHub_Security_AdminAuth.md  DeeperHub_Security_BehavioralAnalysis.md  DeeperHub_Security_BruteForceProtection.md  DeeperHub_Security_CsrfProtection.md  DeeperHub_Security_DataMasking.md  DeeperHub_Security_DdosProtection.md  DeeperHub_Security_DeviceFingerprint.md  DeeperHub_Security_DeviceService.md  DeeperHub_Security_FraudDetection.md  DeeperHub_Security_GeoLocationService.md  DeeperHub_Security_IPFirewallService.md  DeeperHub_Security_IntrusionDetection.md  DeeperHub_Security_PathTraversalProtection.md  (+35 more)
temp/: pagination.ex  repository_joins.ex
test/: database_metrics_test.exs  mail_test.exs  metrics_integration_test.exs  metrics_test.exs  pagination_test.exs  repository_test.exs  test_helper.exs  test_runner.exs  websocket_client.html  websocket_test.exs
test/Support/: factory.ex
test/load_test/: README.md  advanced_load_test.exs  client_simulator.ex  real_time_monitor.ex  run_load_test.exs  simple_load_test.exs  websocket_load_test.ex
test/websocket_client/: README.md  automated_test_client.py  crud_test.py  crud_test_complete.py  crud_test_complete_main.py  crud_test_complete_part2.py  crud_test_complete_part3.py  crud_test_complete_part4.py  (+6 more)
test_python/: README.md  auth_jwt_README.md  deeper_hub_client.py  test_websocket_client.py  test_websocket_client_README.md
(+932 files in other folders)
