# Subprojects configuration for deeper_client

# nlohmann_json
json_proj = subproject('nlohmann_json')
json_dep = json_proj.get_variable('nlohmann_json_dep')

# websocketpp
websocketpp_proj = subproject('websocketpp')
websocketpp_dep = websocketpp_proj.get_variable('websocketpp_dep')

# Exporta as dependências para o projeto principal
nlohmann_json_dep = json_dep
websocketpp_dep = websocketpp_dep
